# taudio-models

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  LICENSE  NOTICE  README.md  compose.yaml  docker-compose.yml  manifest.yaml  pyproject.toml
docs/: api.md  model-cache.md  nonfree.md  registries.md  usage.md
libs/DeepFilterNet/: README.md
licenses/deepfilternet/: LICENSE
scripts/: bootstrap.sh  check_layout.py  check_licenses.py  docker_smoke.sh  fetch_models.py  vendor_deepfilternet.sh
src/taudio_engines/: __init__.py  cache.py  cli.py  manifest.py
src/taudio_engines/api/: __init__.py  engine.py  registry.py  types.py
src/taudio_engines/engines/: __init__.py
src/taudio_models/: __init__.py  cache.py  cli.py  denoise_cli.py  manifest.py  paths.py
src/taudio_models/api/: __init__.py  model.py  registry.py  types.py
src/taudio_models/backends/: __init__.py  deepfilter.py
src/taudio_models/capabilities/: __init__.py  denoise_speech.py
src/taudio_models/models/: __init__.py  deepfilter.py
src/taudio_models/registry/: __init__.py  assets.py  capabilities.py
src/taudio_models/resources/: manifest.yaml
