[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "taudio-engines"
version = "0.1.0"
description = "Open-source audio separation engine libs + model download/cache for TaudioProcess"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "taudio-engines contributors" }]
dependencies = [
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
taudio-engines-fetch = "taudio_engines.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
