[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "taudio-models"
version = "0.2.0"
description = "Open-source audio model layer: catalog, versions, download/cache, load (no engine/pipeline)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "taudio-models contributors" }]
dependencies = [
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
taudio-models-fetch = "taudio_models.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
